[package]
name = "wotcli"
version = "0.1.0"
edition = "2021"
description = "Command line tool for World of Tanks players."
documentation = "https://github.com/jdvor/wotcli/usage.md"
repository = "https://github.com/jdvor/wotcli"
license = "MIT"
authors = ["Jan Dvorak"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }

[dev-dependencies]
